changed public access modifier to private, combined map() and flatMap() methods in flatMap(), removed unnecessary boolean field and validation